# Crypto_report_code

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/examples/: demo.cpp
cpp/include/ore/: common.hpp  large_ore.hpp  range_query.hpp  small_ore.hpp
cpp/src/: common.cpp  large_ore.cpp  range_query.cpp  small_ore.cpp
cpp/tests/: test_main.cpp
examples/: simple_flow.cpp
include/ore/: cmp.hpp  crypto.hpp  large_ore.hpp  prp.hpp  range_query.hpp  small_ore.hpp
src/: crypto.cpp  large_ore.cpp  prp.cpp  range_query.cpp  small_ore.cpp
src/common/: cmp.py  crypto_primitives.py  encoding.py  prp_small_domain.py  types.py
src/ore_small/: compare.py  decrypt.py  encrypt_left.py  encrypt_right.py  scheme.py  setup.py
tests/: test_small_ore.py
